# yell

./: Cargo.toml  README.md  demo_response.json
diagrams/: .$mockup.drawio.bkp  .$mockup.drawio.dtmp  mockup.drawio
resources/: resources.gresource.xml  style.css
resources/ui/: application-window.ui  download-dialog.ui  download-error-dialog.ui  download-finish-dialog.ui  downloading-dialog.ui  file-chooser-dialog.ui  finished-dialog.ui  search-error-dialog.ui  video-item.ui  video-preview.ui  video-previewer.ui  video-searcher.ui  window.ui
src/: application.rs  client.rs  config.rs  main.rs  video_preview.rs  video_previewer.rs  video_searcher.rs
src/application/: imp.rs  mod.rs
src/application_window/: callbacks.rs  imp.rs  mod.rs
src/result/: imp.rs  mod.rs
src/video/: deserialize.rs  imp.rs  mod.rs
src/video_object/: deserialize.rs  imp.rs  mod.rs
src/video_preview/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
