[package]
name = "yell"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_6"] }
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = "1.0.193"
serde_json = "1.0.108"

[build-dependencies]
glib-build-tools = "0.18.0"
