[package]
name = "yell"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.5.3", package = "libadwaita", features = ["v1_1"]}
async-channel = "2.1.1"
dotenv = "0.15.0"
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_6"] }
html-escape = "0.2.13"
reqwest = { version = "0.11.23", features = ["blocking"] }
rustube = { version = "0.6.0", features = ["blocking", "callback"] }
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
glib-build-tools = "0.18.0"
